# aws-serverless-cron-template

./: Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: serverless-cron.yml
cdk/: setup.py
cdk/my_service/: constants.py  consumer.py  cron_construct.py  lambda_cron_construct.py  lambda_cron_rules.py  producer.py  scheduler_cron.py  service_stack.py  sqs_redrive.py  stepfunc_cron_rules.py
service/dal/: polly_handler.py
service/handlers/: cron_job.py  dlq_func.py  processor.py  scheduler_func.py  sqs_func.py
service/handlers/schemas/: env_vars.py  sqs_input.py
service/logic/: consume_text.py  handle_order.py
tests/integration/: conftest.py  test_create_order.py  test_dummy.py  test_sqs.py
text/: sample.txt
